[metadata]
name = django-stisla
version = 0.1
description = A bootstrap template for Django Admin
long_description = file: README.rst
url = https://rezaur.xyz/django-stisla
author = Rezaur Rahman
author_email = rez28r@gmail.com
license = Free for non-commercial use, GNU Affero General Public License v3 (AGPLv3)
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: