[metadata]
name = django-stisla
version = 0.0.5
description = A Bootstrap template for Django Admin
long_description = file: README.rst
url = https://github.com/jituboss/django-stisla
author = Rezaur Rahman
author_email = rez28r@gmail.com
license = GNU General Public License v3.0
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
include_package_data = true
packages = find: